# spyping

./: .gitignore  AGENTS.md  AI-Instructions.md  ENGLISH.md  README.md  android.md  build_apk.sh  build_desktop.sh  codex.md  create_desktop_shortcut.sh  lastsession.sh  pyproject.toml
src/: main.py  version.py
