[project]
name = "spyping"
version = "1.0.4"
description = "A small Android Flet app for configurable periodic ping checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.85.3",
]

[dependency-groups]
dev = [
    "flet-cli==0.85.3",
    "flet-desktop==0.85.3",
    "flet-web==0.85.3",
]

[tool.flet]
org = "gr.spyalekos"
product = "spyping"
company = "spyalekos"
copyright = "Copyright (C) 2026 by Spyalekos"

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true
